--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,9 +31,7 @@
     <div class="container">
       <div>
         <%if @message && @message.length > 0 then %>
-          <div class="alert alert-success" role="alert">
-            <%=@message%>
-          </div>        
+          <div class="alert alert-success" role="alert"><%=@message%></div>
         <% end %>
         <%if @error && @error.length > 0 then %>
           <div class="alert alert-danger"><%=@error%></div>
