--- a/views/about.erb
+++ b/views/about.erb
@@ -1,4 +1,4 @@
-<h1>Welcom to Pizza shop!!!</h1>
+<h1>об нас</h1>
 
 <button class="btn btn-primary btn-lg" onclick="something()">Click me</button>
 
