--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,20 +9,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/jquery.simplecolorpicker.css">
-    <script src="/jquery.simplecolorpicker.js"></script>
-
-    <!-- this should go after your </body> -->
-    <link rel="stylesheet" type="text/css" href="/jquery.datetimepicker.css"/ >
-    <script src="/jquery.datetimepicker.full.min.js"></script>
-    
+    <script src="app.js"></script>
  </head>
   <body>
     <header class="navbar navbar-expand navbar-light flex-column flex-md-row bd-navbar" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="/">Barershop</a>
+      <a class="navbar-brand" href="/">Pizza shop</a>
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
-          <li class="nav-item" ><a  class="nav-link  active" href="/visit">Visit</a></li>
+          <li class="nav-item" ><a  class="nav-link  active" href="/about">About</a></li>
           <li class="nav-item" ><a  class="nav-link" href="/admin">Admin</a></li>
           <li class="nav-item" ><a  class="nav-link" href="/clients">Clients</a></li>
         </ul>
