--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
  </head>
   <body>
     <header class="navbar navbar-expand navbar-light flex-column flex-md-row bd-navbar" style="background-color: #e3f2fd;">
@@ -33,5 +33,13 @@
         <%= yield %>
       </div>
     </div>
+    <div id="elements"></div>
+    <script>
+        var str="";
+        for (var i=0; i < localStorage.length; i++) {
+            str += "Ключ: " + localStorage.key(i) + "; Значение: " + localStorage.getItem(localStorage.key(i)) + ".<br>";
+        }
+        document.getElementById("elements").innerHTML = str;
+    </script>
   </body>
 </html>
