--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,6 @@
-<h1>Welcom to Pizza shop!!!</h1>
-
-<button class="btn btn-primary btn-lg" onclick="something()">Click me</button>
-
+<div class="container" id="div1">
+  <h1 id="wlcm">Welcom to Pizza shop!!!</h1>
+</div>
 
 <div class="container">
   <div class="row">
@@ -16,3 +15,5 @@
     <% end %>
   </div>
 </div>
+
+
